RESOLVED FIXED190891
REGRESSION (r236779) scandinaviandesigns.com product pages auto redirect to product image
https://bugs.webkit.org/show_bug.cgi?id=190891
Summary REGRESSION (r236779) scandinaviandesigns.com product pages auto redirect to p...
Chris Dumez
Reported 2018-10-24 16:03:17 PDT
scandinaviandesigns.com product pages auto redirect to product image since r236779.
Attachments
Patch (5.14 KB, patch)
2018-10-24 16:15 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-24 16:03:59 PDT
Chris Dumez
Comment 2 2018-10-24 16:15:10 PDT
Antti Koivisto
Comment 3 2018-10-25 05:52:19 PDT
r=me
WebKit Commit Bot
Comment 4 2018-10-25 07:15:29 PDT
Comment on attachment 353062 [details] Patch Clearing flags on attachment: 353062 Committed r237413: <https://trac.webkit.org/changeset/237413>
WebKit Commit Bot
Comment 5 2018-10-25 07:15:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.