REGRESSION (236779) scandinaviandesigns.com product pages auto redirect to product image https://bugs.webkit.org/show_bug.cgi?id=190891 <rdar://problem/45296796>

Reviewed by Antti Koivisto.

Source/WebCore:

When a radio element gets clicked, we should only fire the 'input' and 'change' if the checked state
of the radio element has changed.

Test: fast/dom/HTMLInputElement/radio-element-fires-change-event-only-when-checked-state-changes.html

* html/RadioInputType.cpp:
(WebCore::RadioInputType::didDispatchClick):

LayoutTests:

Add layout test coverage.

* fast/dom/HTMLInputElement/radio-element-fires-change-event-only-when-checked-state-changes-expected.txt: Added.
* fast/dom/HTMLInputElement/radio-element-fires-change-event-only-when-checked-state-changes.html: Added.


Canonical link: https://commits.webkit.org/205754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237413 268f45cc-cd09-0410-ab3c-d52691b4dbfc